Added beginnings of information to index.html and started basic styling.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,71 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
-    Test
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Grayson Gantek</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">Contact</a>
+                </li>
+            </ul>
+            <span class="navbar-text">
+                My Title Here
+            </span>
+        </div>
+    </nav>
+
+    <div class="row-12">
+        <div id="about-col" class="col-10">
+            <div class="row">
+                <div class="col">
+                    <h1>About Me</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 text-muted">
+                    <img src="./images/me.png" alt="photo of me" id="about-photo" class="rounded img-fluid">
+                    <p class="about-p">This will be information about me.</p>
+                    <p>Such as location,</p>
+                    <p>fun facts,</p>
+                    <p>And anything else.</p>
+                </div>
+                <div class="col-8">
+                    <p>My name is Grayson Gantek, and I am a designer, developer, and illustrator. I grew up in and
+                        around Acworth, Georgia (just outside of Atlanta) and am currently working through the Georgia
+                        Tech Coding Boot Camp to earn a certificate in full-stack web development. I've always been a
+                        creator for as long as I can remember.</p>
+                    <p>My story is very similar to other kids from the 90s: Cartoon Network with Toaster Strudel
+                        mornings, Gamecube gaming, Heelies, airsoft with best friends in the summers, and most
+                        importantly, LEGOs. They taught me how to follow instructions and how to be imaginative, but
+                        most importantly, they taught me how to create. These early interests directly influenced the
+                        way I carry myself in my personal life and in my professional life.</p>
+                    <p>Currently I am transferring universities from Kennesaw State University to Georgia Tech. There I
+                        plan to study web development and gain a certificate from Georgia Tech.</p>
+                    <p>I started working at a local print shop in the summer of 2016. My initial role there was lead
+                        graphic designer, but during my time there I was taught so much more. I got the opportunity to
+                        learn about print design, preparation, and how to work with customers to help figure out what
+                        they envisioned their projects to be.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
