--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Grayson Gantek</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -40,21 +41,27 @@
     </nav>
 
     <div class="row-12">
-        <div id="about-col" class="col-10">
+        <div id="about-col" class="col-12">
             <div class="row">
                 <div class="col">
                     <h1>About Me</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4 text-muted">
-                    <img src="./images/me.png" alt="photo of me" id="about-photo" class="rounded img-fluid">
-                    <p class="about-p">This will be information about me.</p>
-                    <p>Such as location,</p>
-                    <p>fun facts,</p>
-                    <p>And anything else.</p>
+                <div class="col-12 col-md-4 text-muted">
+                    <div class="row">
+                        <div class="mb-4 col-6 col-md-12">
+                            <img src="./images/me.png" alt="photo of me" id="about-photo" class="rounded img-fluid">
+                        </div>
+                        <div class="mb-4 col-6 col-md-12">
+                            <p class="about-p">This will be information about me.</p>
+                            <p>Such as location,</p>
+                            <p>fun facts,</p>
+                            <p>And anything else.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-8">
+                <div class="col-12 col-md-8">
                     <p>My name is Grayson Gantek, and I am a designer, developer, and illustrator. I grew up in and
                         around Acworth, Georgia (just outside of Atlanta) and am currently working through the Georgia
                         Tech Coding Boot Camp to earn a certificate in full-stack web development. I've always been a
@@ -74,6 +81,7 @@
             </div>
         </div>
     </div>
+    
 </body>
 
 </html>
