--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,73 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
-    Test
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Grayson Gantek</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">About</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="./portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">Contact</a>
+                </li>
+            </ul>
+            <span class="navbar-text">
+                My Title Here
+            </span>
+        </div>
+    </nav>
+
+    <div class="row-12">
+        <div id="about-col" class="col-12">
+            <div class="row">
+                <div class="col">
+                    <h1>Portfolio</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <figure class="figure">
+                        <img src="./images/mountains1.jpg" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                    </figure>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <figure class="figure">
+                        <img src="./images/mountains2.jpg" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                    </figure>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <figure class="figure">
+                        <img src="./images/mountains3.jpg" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                    </figure>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <figure class="figure">
+                        <img src="./images/mountains4.jpg" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
