--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
 
     <div class="row-12">
-        <div id="about-col" class="col-12">
+        <div class="max-width col-12">
             <div class="row">
                 <div class="col">
                     <h1>About Me</h1>
@@ -54,7 +54,7 @@
                             <img src="./images/me.png" alt="photo of me" id="about-photo" class="rounded img-fluid">
                         </div>
                         <div class="mb-4 col-6 col-md-12">
-                            <p class="about-p">This will be information about me.</p>
+                            <p class="about-p">This will be extra information about me.</p>
                             <p>Such as location,</p>
                             <p>fun facts,</p>
                             <p>And anything else.</p>
@@ -81,7 +81,7 @@
             </div>
         </div>
     </div>
-    
+
 </body>
 
 </html>
