--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
 
-    <div class="row-12">
+    <div class="row-12 max-width">
         <div id="about-col" class="col-12">
             <div class="row">
                 <div class="col">
