--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
 </head>
 
 <body>
@@ -75,7 +77,11 @@
                 <div class="col-12 col-md-4 text-muted text-right" id="contact-aside">
                     <p>Please feel free to contact me at any time. Please provide your name, email, and reason for contact.</p>
                     <p>I usually respond within a day or two.</p>
-                    <a href="#">Link to somewhere</a>
+                    <a href="#">Link to somewhere</a> <br/> <br/>
+                    <hr>
+                    <p>Find me on these sites:</p>
+                    <a href="http://www.behance.net/pizzaThis" target="_blank" class="social-icon"><i class="fab fa-behance-square" style="font-size: 3rem; padding-right: 10px;"></i></a>
+                    <a href="http://www.linkedin.com/in/graysongantek" target="_blank"><i class="fab fa-linkedin" style="font-size: 3rem;"></i></>
                 </div>
             </div>
         </div>
