Added hover effects on project page and removed hover effects for mobile devices.

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,33 +48,102 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <figure class="figure">
-                        <img src="./images/mountains1.jpg" class="figure-img img-fluid rounded" alt="...">
-                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-                    </figure>
+                <div class="col-12 col-sm-6">
+                    <a href="#" class="single-project-container">
+                        <figure class="mb-4">
+                            <img src="./images/mountains1.jpg" alt="mountains1">
+                            <figcaption>
+                                <h2>Short Title</h2>
+                                <p>Description</p>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <div class="single-project-mobile-desc text-muted text-center">
+                            <p>Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <figure class="figure">
-                        <img src="./images/mountains2.jpg" class="figure-img img-fluid rounded" alt="...">
-                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-                    </figure>
+                <div class="col-12 col-sm-6">
+                    <a href="#" class="single-project-container">
+                        <figure class="mb-4">
+                            <img src="./images/mountains2.jpg" alt="mountains1">
+                            <figcaption>
+                                <h2>Short Title</h2>
+                                <p>Description</p>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <div class="single-project-mobile-desc text-muted text-center">
+                            <p>Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <figure class="figure">
-                        <img src="./images/mountains3.jpg" class="figure-img img-fluid rounded" alt="...">
-                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-                    </figure>
+                <div class="col-12 col-sm-6">
+                    <a href="#" class="single-project-container">
+                        <figure class="mb-4">
+                            <img src="./images/mountains3.jpg" alt="mountains1">
+                            <figcaption>
+                                <h2>Short Title</h2>
+                                <p>Description</p>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <div class="single-project-mobile-desc text-muted text-center">
+                            <p>Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <figure class="figure">
-                        <img src="./images/mountains4.jpg" class="figure-img img-fluid rounded" alt="...">
-                        <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-                    </figure>
+                <div class="col-12 col-sm-6">
+                    <a href="#" class="single-project-container">
+                        <figure class="mb-4">
+                            <img src="./images/mountains4.jpg" alt="mountains1">
+                            <figcaption>
+                                <h2>Short Title</h2>
+                                <p>Description</p>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <div class="single-project-mobile-desc text-muted text-center">
+                            <p>Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                </div>
+                <div class="col-12 col-sm-6">
+                    <a href="#" class="single-project-container">
+                        <figure class="mb-4">
+                            <img src="./images/mountains1.jpg" alt="mountains1">
+                            <figcaption>
+                                <h2>Short Title</h2>
+                                <p>Description</p>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <div class="single-project-mobile-desc text-muted text-center">
+                            <p>Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                </div>
+                <div class="col-12 col-sm-6">
+                    <a href="#" class="single-project-container">
+                        <figure class="mb-4">
+                            <img src="./images/mountains2.jpg" alt="mountains1">
+                            <figcaption>
+                                <h2>Short Title</h2>
+                                <p>Description</p>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <div class="single-project-mobile-desc text-muted text-center">
+                        <p>Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script> </script>
+    <!--Empty script to fix animations playing on load, chrome bug-->
 
 </body>
 
