Various small fixes; rounded edges on projects, fixed label for text area...

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                                 without permission.</small>
                         </div>
                         <div class="form-group">
-                            <label for="contact-text-area">Example textarea</label>
+                            <label for="contact-text-area">Message</label>
                             <textarea class="form-control" id="contact-text-area" rows="6"></textarea>
                         </div>
                         <button type="button" class="btn btn-primary" id="contact-button">Submit</button>
