--- a/portfolio.html
+++ b/portfolio.html
@@ -16,107 +16,113 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Grayson Gantek</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="./index.html">About</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="./portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-            </ul>
-            <span class="navbar-text">
-                My Title Here
-            </span>
-        </div>
-    </nav>
-
-    <div class="row-12 max-width">
-        <div id="about-col" class="col-12">
-            <div class="row">
-                <div class="col">
-                    <h1>Portfolio</h1>
-                </div>
+    <div class="wrapper">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Grayson Gantek</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html">About</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+                <span class="navbar-text">
+                    My Title Here
+                </span>
             </div>
-            <div class="row">
-                <div class="col-12 col-sm-6">
-                    <a href="#" class="single-project-container">
-                        <figure class="mb-4">
-                            <img src="./images/mountains1.jpg" alt="mountains1">
-                            <figcaption>
-                                <h2>Short Title</h2>
-                                <p>Description</p>
-                            </figcaption>
-                        </figure>
-                    </a>
+        </nav>
+    
+        <div class="row-12 max-width">
+            <div id="about-col" class="col-12">
+                <div class="row">
+                    <div class="col">
+                        <h1>Portfolio</h1>
+                    </div>
                 </div>
-                <div class="col-12 col-sm-6">
-                    <a href="#" class="single-project-container">
-                        <figure class="mb-4">
-                            <img src="./images/mountains2.jpg" alt="mountains1">
-                            <figcaption>
-                                <h2>Short Title</h2>
-                                <p>Description</p>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-                <div class="col-12 col-sm-6">
-                    <a href="#" class="single-project-container">
-                        <figure class="mb-4">
-                            <img src="./images/mountains3.jpg" alt="mountains1">
-                            <figcaption>
-                                <h2>Short Title</h2>
-                                <p>Description</p>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-                <div class="col-12 col-sm-6">
-                    <a href="#" class="single-project-container">
-                        <figure class="mb-4">
-                            <img src="./images/mountains4.jpg" alt="mountains1">
-                            <figcaption>
-                                <h2>Short Title</h2>
-                                <p>Description</p>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-                <div class="col-12 col-sm-6">
-                    <a href="#" class="single-project-container">
-                        <figure class="mb-4">
-                            <img src="./images/mountains1.jpg" alt="mountains1">
-                            <figcaption>
-                                <h2>Short Title</h2>
-                                <p>Description</p>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-                <div class="col-12 col-sm-6">
-                    <a href="#" class="single-project-container">
-                        <figure class="mb-4">
-                            <img src="./images/mountains2.jpg" alt="mountains1">
-                            <figcaption>
-                                <h2>Short Title</h2>
-                                <p>Description</p>
-                            </figcaption>
-                        </figure>
-                    </a>
+                <div class="row">
+                    <div class="col-12 col-sm-6">
+                        <a href="#" class="single-project-container">
+                            <figure class="mb-4">
+                                <img src="./images/mountains1.jpg" alt="mountains1">
+                                <figcaption>
+                                    <h2>Short Title</h2>
+                                    <p>Description</p>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <a href="#" class="single-project-container">
+                            <figure class="mb-4">
+                                <img src="./images/mountains2.jpg" alt="mountains1">
+                                <figcaption>
+                                    <h2>Short Title</h2>
+                                    <p>Description</p>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <a href="#" class="single-project-container">
+                            <figure class="mb-4">
+                                <img src="./images/mountains3.jpg" alt="mountains1">
+                                <figcaption>
+                                    <h2>Short Title</h2>
+                                    <p>Description</p>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <a href="#" class="single-project-container">
+                            <figure class="mb-4">
+                                <img src="./images/mountains4.jpg" alt="mountains1">
+                                <figcaption>
+                                    <h2>Short Title</h2>
+                                    <p>Description</p>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <a href="#" class="single-project-container">
+                            <figure class="mb-4">
+                                <img src="./images/mountains1.jpg" alt="mountains1">
+                                <figcaption>
+                                    <h2>Short Title</h2>
+                                    <p>Description</p>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <a href="#" class="single-project-container">
+                            <figure class="mb-4">
+                                <img src="./images/mountains2.jpg" alt="mountains1">
+                                <figcaption>
+                                    <h2>Short Title</h2>
+                                    <p>Description</p>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <footer class="bg-dark text-center text-light text-muted py-4">
+        Copyright &copy; 2019 Grayson Gantek.
+    </footer>
 
     <script> </script>
     <!--Empty script to fix animations playing on load, chrome bug-->
