Added general changes to the verbiage of the entire site. Added hover effects to the linkedin and behance icons on contact page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    My Title Here
+                    Designer and Developer
                 </span>
             </div>
         </nav>
@@ -54,8 +54,8 @@
                             <figure class="mb-4">
                                 <img src="./images/mountains1.jpg" alt="mountains1">
                                 <figcaption>
-                                    <h2>Short Title</h2>
-                                    <p>Description</p>
+                                    <h2>Project one</h2>
+                                    <p>Project one's description. Lorem ipsum dolor sit amet.</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -65,8 +65,8 @@
                             <figure class="mb-4">
                                 <img src="./images/mountains2.jpg" alt="mountains1">
                                 <figcaption>
-                                    <h2>Short Title</h2>
-                                    <p>Description</p>
+                                    <h2>Project two</h2>
+                                    <p>Project two's description. Lorem ipsum dolor sit amet.</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -76,8 +76,8 @@
                             <figure class="mb-4">
                                 <img src="./images/mountains3.jpg" alt="mountains1">
                                 <figcaption>
-                                    <h2>Short Title</h2>
-                                    <p>Description</p>
+                                    <h2>Project three</h2>
+                                    <p>Project three's description. Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -87,8 +87,8 @@
                             <figure class="mb-4">
                                 <img src="./images/mountains4.jpg" alt="mountains1">
                                 <figcaption>
-                                    <h2>Short Title</h2>
-                                    <p>Description</p>
+                                    <h2>Project four</h2>
+                                    <p>Project four's description. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non.</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -98,8 +98,8 @@
                             <figure class="mb-4">
                                 <img src="./images/mountains1.jpg" alt="mountains1">
                                 <figcaption>
-                                    <h2>Short Title</h2>
-                                    <p>Description</p>
+                                    <h2>Project five</h2>
+                                    <p>Project five's description. Lorem, ipsum dolor.</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -109,8 +109,8 @@
                             <figure class="mb-4">
                                 <img src="./images/mountains2.jpg" alt="mountains1">
                                 <figcaption>
-                                    <h2>Short Title</h2>
-                                    <p>Description</p>
+                                    <h2>Project six</h2>
+                                    <p>Project six's description. Lorem ipsum dolor sit amet.</p>
                                 </figcaption>
                             </figure>
                         </a>
