--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    My Title Here
+                    Designer and Developer
                 </span>
             </div>
         </nav>
@@ -76,13 +76,12 @@
                         </form>
                     </div>
                     <div class="col-12 col-md-4 text-muted text-right" id="contact-aside">
-                        <p>Please feel free to contact me at any time. Please provide your name, email, and reason for contact.</p>
+                        <p>Feel free to contact me at any time.</p>
                         <p>I usually respond within a day or two.</p>
-                        <a href="#">Link to somewhere</a> <br/> <br/>
                         <hr>
                         <p>Find me on these sites:</p>
                         <a href="http://www.behance.net/pizzaThis" target="_blank" class="social-icon"><i class="fab fa-behance-square" style="font-size: 3rem; padding-right: 10px;"></i></a>
-                        <a href="http://www.linkedin.com/in/graysongantek" target="_blank"><i class="fab fa-linkedin" style="font-size: 3rem;"></i></a>
+                        <a href="http://www.linkedin.com/in/graysongantek" target="_blank" class="social-icon"><i class="fab fa-linkedin" style="font-size: 3rem;"></i></a>
                     </div>
                 </div>
             </div>
@@ -93,6 +92,8 @@
     <footer class="bg-dark text-center text-light text-muted py-4">
         Copyright &copy; 2019 Grayson Gantek.
     </footer>
+
+    <script> </script> <!--Empty script to stop animations from autoplaying on load; chrome bug-->
 
 </body>
 
