--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    My Title Here
+                    Designer and Developer
                 </span>
             </div>
         </nav>
@@ -55,10 +55,8 @@
                                 <img src="./images/me.png" alt="photo of me" id="about-photo" class="rounded img-fluid">
                             </div>
                             <div class="mb-4 col-6 col-md-12">
-                                <p class="about-p">This will be extra information about me.</p>
-                                <p>Such as location,</p>
-                                <p>fun facts,</p>
-                                <p>And anything else.</p>
+                                <p class="about-p">Currently located in Dallas, Georgia.</p>
+                                <p></p>
                             </div>
                         </div>
                     </div>
