--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,9 @@
 <body>
 
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Grayson Gantek</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">About</a>
@@ -34,12 +30,9 @@
                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./contact.html">Contact <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
-                <span class="navbar-text">
-                    Designer and Developer
-                </span>
             </div>
         </nav>
     
