--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@
 <body>
 
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Grayson Gantek</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
@@ -35,12 +31,9 @@
                         <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
                 </ul>
-                <span class="navbar-text">
-                    Designer and Developer
-                </span>
             </div>
         </nav>
-    
+
         <div class="row-12">
             <div class="max-width col-12">
                 <div class="row">
@@ -62,19 +55,25 @@
                     </div>
                     <div class="col-12 col-md-8">
                         <p>My name is Grayson Gantek, and I am a designer, developer, and illustrator. I grew up in and
-                            around Acworth, Georgia (just outside of Atlanta) and am currently working through the Georgia
-                            Tech Coding Boot Camp to earn a certificate in full-stack web development. I've always been a
+                            around Acworth, Georgia (just outside of Atlanta) and am currently working through the
+                            Georgia
+                            Tech Coding Boot Camp to earn a certificate in full-stack web development. I've always been
+                            a
                             creator for as long as I can remember.</p>
                         <p>My story is very similar to other kids from the 90s: Cartoon Network with Toaster Strudel
                             mornings, Gamecube gaming, Heelies, airsoft with best friends in the summers, and most
                             importantly, LEGOs. They taught me how to follow instructions and how to be imaginative, but
-                            most importantly, they taught me how to create. These early interests directly influenced the
+                            most importantly, they taught me how to create. These early interests directly influenced
+                            the
                             way I carry myself in my personal life and in my professional life.</p>
-                        <p>Currently I am transferring universities from Kennesaw State University to Georgia Tech. There I
+                        <p>Currently I am transferring universities from Kennesaw State University to Georgia Tech.
+                            There I
                             plan to study web development and gain a certificate from Georgia Tech.</p>
                         <p>I started working at a local print shop in the summer of 2016. My initial role there was lead
-                            graphic designer, but during my time there I was taught so much more. I got the opportunity to
-                            learn about print design, preparation, and how to work with customers to help figure out what
+                            graphic designer, but during my time there I was taught so much more. I got the opportunity
+                            to
+                            learn about print design, preparation, and how to work with customers to help figure out
+                            what
                             they envisioned their projects to be.</p>
                     </div>
                 </div>
