General fixes with footer margin and contact page elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@
         </div>
     </div>
 
-    <footer class="bg-dark text-center text-light text-muted py-4">
+    <footer class="bg-dark text-center text-light text-muted py-4 mt-4">
         Copyright &copy; 2019 Grayson Gantek.
     </footer>
 
