--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
                                 <label for="contact-email">Email address</label>
                                 <input type="email" class="form-control" id="contact-email"
                                     placeholder="name@example.com">
-                                <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else
-                                    without permission.</small>
+                                <!-- <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else
+                                    without permission.</small> -->
                             </div>
                             <div class="form-group">
                                 <label for="contact-text-area">Message</label>
@@ -82,7 +82,7 @@
         </div>
     </div>
 
-    <footer class="bg-dark text-center text-light text-muted py-4">
+    <footer class="bg-dark text-center text-light text-muted py-4 mt-4">
         Copyright &copy; 2019 Grayson Gantek.
     </footer>
 
